sample-django-chart/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-django-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: sample-django
  template:
    metadata:
      labels:
        app: sample-django
    spec:
      containers:
        - name: sample-django
          image: howery/sample-django
          command: ["sh", "-c", "python manage.py collectstatic --noinput && gunicorn --bind 0.0.0.0:8080 mysite.wsgi"]
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 20
            failureThreshold: 3
          resources:
            requests:
              memory: "128Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
