sample-django-chart/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-django-service
spec:
  selector:
    app: sample-django
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
