sample-django-chart/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sample-django-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - sample-django.pp.ua
    secretName: sample-django-tls
  rules:
  - host: sample-django.pp.ua
    http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: sample-django-service
              port:
                number: 80
